# psmux

./: .gitignore  Cargo.toml  investigations.md
docs/: compatibility.md  configuration.md  faq.md  features.md  integration.md  pane-titles.md  tmux_args_reference.md
src/: cli.rs  client.rs  commands.rs  config.rs  copy_mode.rs  debug_log.rs  format.rs  input.rs  main.rs  pane.rs  platform.rs  popup.rs  proxy_pane.rs  rendering.rs  session.rs  ssh_input.rs  tree.rs  types.rs  window_ops.rs
tests/: conpty_ctrlc_host.cs  ctrl_enter_recv.js  esc_reader.py  esc_reader2.py  injector.cs  repro_issue303.ps1  repro_issue303b.ps1  repro_issue303c.ps1  repro_issue363_bytelog.ps1  run_all_integration.ps1  stress_new_session_readiness.ps1  test_first_pane_cpr_hang.ps1  test_isolated_sessions_L_flag.ps1  test_issue102_resize_pane.ps1  test_issue103_cjk_paste_no_crash.ps1  test_issue106_no_server_error.ps1  test_issue109_new_session_error.ps1  test_issue113_pane_active.ps1  test_issue116_utf8_conpty.ps1  test_issue117_xdg_config.ps1  test_issue119_dash_f_config.ps1  test_issue120_warm_server_leak.ps1  test_issue122_backslash_pane.ps1  test_issue129_dangling_process.ps1  test_issue141_wrap_nav_column_row.ps1  test_issue143_display_panes_clear.ps1  test_issue144_display_panes_freeze.ps1  test_issue149_command_prompt_editing.ps1  test_issue150_prediction_source.ps1  test_issue152_copy_mode.ps1  (+131 more)
tests-rs/: test_client.rs  test_cpr_responder.rs  test_ctrlc_shell_classify.rs  test_format.rs  test_gastown_scenarios.rs  test_input.rs  test_issue167_envblock.rs  test_issue198_pastedetect_frame_parity.rs  test_issue210_gastown_fixes.rs  test_issue275_detach_client.rs  test_issue284_pageup_wsl.rs  test_issue345_command_prompt_utf8.rs  test_issue370_config_warnings.rs  test_issue381_gitbash_fullscreen_falsepositive.rs  test_issue383_swap_pane_targets.rs  test_issue394_ctrl_slash_conpty.rs  test_issue399_env_prefix.rs  test_issue400_swap_pane_index_order.rs  test_issue402_parse.rs  test_issue413_copy_count.rs  test_issue416_inline_comments.rs  test_issue425_bold_is_bright_option.rs  test_issue426_split_pane_alias.rs  test_issue442_swap_pane_source.rs  test_pane_last_input.rs  test_pane_title.rs  test_pr267_backpressure_proof.rs  test_session.rs  test_ssh_vt_paste.rs  test_zoom_cursor_rect.rs
(+10 files in other folders)
